@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - /tapper/reports/info/{firstid,lastid} - introduce info urls
 
 5.0.14    2019-03-01
         - testplans - lots of small tweaks everywhere
